--- a/src/components/Aboutme/aboutme.css
+++ b/src/components/Aboutme/aboutme.css
@@ -2,6 +2,7 @@
 text-align: center;
 font-size: 3vw;
 text-transform: uppercase;
+color: #007074;
 }
 .about-me-card{
     display: flex;
@@ -18,10 +19,50 @@ text-transform: uppercase;
 }
 .about-me-card-items{
     width: 50vw;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 .about-me-card-items h1{
     font-size: 3vw;
 }
 .about-me-card-items p{
     font-size: 2vw;
+}
+.skills-logo{
+    display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  gap: 10px;
+}
+.skills-logo span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4vw;
+    padding: 1.5vw;
+    border-radius: 10px;
+    background: #cccccc8f;
+    transition:0.2s linear;
+}
+.skills-logo span:nth-child(1){
+    color: orange;
+}
+.skills-logo span:nth-child(2){
+    color: blue;
+}
+.skills-logo span:nth-child(3){
+    color: #ffd900;
+}
+.skills-logo span:nth-child(4){
+    color: blue;
+}
+.skills-logo span:nth-child(1){
+    color: orange;
+}
+.skills-logo span:nth-child(6){
+    color: red;
+}
+.skills-logo span:hover{
+    background-color: #b8b7b7a4;
+    transform: scale(105%);
 }
